# tseda

./: .gitignore  .nojekyll  CONTRIBUTING.md  LICENSE  README.md  index.html  notebook.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: build.yml  ci.yml
docs/: _quarto.yml  index.qmd  notebook.qmd
src/tseda/: __init__.py  __main__.py  app.py  cache.py  config.py  datastore.py  gnn.py  jit.py  logging.py  main.py  model.py  preprocess.py
src/tseda/pages/: __init__.py  gnn.py  gnnhaplotype.py  map.py  sample_sets.py  stats.py  structure.py  trees.py
src/tseda/vpages/: __init__.py  core.py  gnn.py  ignn.py  individuals.py  map.py  overview.py  sample_sets.py  stats.py  structure.py  trees.py
tests/: conftest.py  test_datastore.py  test_geo.py  test_gnn.py  test_model.py  test_trees.py  test_ui.py
tests/data/: test.trees.tsbrowse  test.trees.tsdate.tseda  test.trees.tseda  test.trees.tsz  test.ts
