[project]
name = "tseda"
description = "Tree sequence exploratory data analysis"
authors = [
    { name = "Per Unneberg", email = "per.unneberg@scilifelab.se" }
]
dependencies = [
    "panel==1.5.3",
    "tskit==0.6.0",
    "tszip==0.2.5",
    "click==8.1.7",
    "daiquiri==3.2.5.1",
    "holoviews==1.19.1",
    "numba==0.60.0",
    "diskcache==5.6.3",
    "appdirs==1.4.4",
    "geoviews==1.13.0",
    "cartopy==0.23.0",
    "geopandas==1.0.1",
    "dask[dataframe]==2024.8.1",
    "hvplot==0.11.1",
    "xyzservices==2024.6.0",
    "tsbrowse @ git+https://github.com/tskit-dev/tsbrowse@2faab76ad3a1f4bb51e6a39ce1c244dc1ac8209b",
]
readme = "README.md"
requires-python = ">= 3.12"
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "src/tseda/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tseda"]

[tool.uv]
managed = true
dev-dependencies = [
    "jupyter==1.0.0",
    "pyright==1.1.388",
    "pytest==8.3.2",
    "stdpopsim==0.2.0",
    "geodatasets==2024.7.0",
    "pip==24.2",
    "hatch-vcs==0.4.0",
    "watchfiles==0.24.0",
    "pytest-playwright==0.5.2",
]

[project.scripts]
"tseda" = "tseda:main"

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = [
  "A",    # warn about shadowing built-ins
  "E",    # style stuff, whitespaces
  "F",    # important pyflakes lints
  "I",    # import sorting
  "N",    # naming
  "T100", # breakpoints
]
ignore = ["N806"]

[tool.ruff.lint.isort]
# so it knows to group first-party stuff last
known-first-party = ["tseda"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
pythonVersion = "3.12"  # _lowest_ supported version
reportMissingTypeStubs = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportOptionalMemberAccess = false
reportAssignmentType = false
reportArgumentType = false

[tool.uv.scripts]
fmt = "rye fmt"
lint = "rye lint src --fix"
check = "pyright"
test = "rye test"
all = { chain = ["fmt", "lint", "check", "test"] }

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore src/tseda/main.py"
